Fix height on demo container (double scroll)

--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -29,6 +29,8 @@
     @include clearfix;
     height: 100%;
     width: 100%; // Firefox fix
+    
+    @include calc("height", "100% - 45px");
   }
 
   #layout-demo, html {
